--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
      </section>
      <br>
      <footer id="footer3"> 
-            <p>Habitat Guest House &copy; 2019 All Rights Reserved</p>
+            <p>Habitat Guest House &copy; 2019 All Rights Reserved</p> email us
         </footer>
 
     
