--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
         
                <div id="imageright">
             <div class="picture">
-                <img src="../Hotel web/imgs/DSC_7011.jpg" alt="" width="300px">
+                <img src="../Hotel web/imgs/pexels-curtis-adams-3773577.jpg" alt="" width="500px">
             </div>
         </div>
         </div>
